This documents significant changes in the 1.0 branch of ksh 93u+m.
For full details, see the git log at: https://github.com/ksh93/ksh/tree/1.0

Any uppercase BUG_* names are modernish shell bug IDs.

2022-06-01:

- New 'typeset' feature inspired by bash (and zsh and mksh): the -g flag
  causes the specified variable(s) to be created globally, ignoring the
  local scope of ksh functions or name spaces. For example, this allows
  creating a global array or numeric variable from a ksh function.
  Thanks to @ormaaj for the feature suggestion and to @hyenias for testing.

2022-05-29:

- Fixed a bug causing an inconsistent state after a special built-in command
  threw an error within a namespace.

2022-05-27:

- Fixed a bug introduced on 2022-03-05 where 'set --default', while turning
  off the --posix option, did not re-enable the special handling of a repeated
  $IFS whitespace character as non-whitespace.

2022-05-25:

- Fixed a bug introduced on 2021-02-20 that caused incorrect output for
  typeset -L/-R/-Z when the variable contained leading or trailing spaces.
  Thanks to George Lijo for the report and the fix.

2022-05-21:

- Fixed a bug, present since the beginning of ksh93, that broke backslash line
  continuation within $(standard) and ${ shared-state; } command substitutions.
  Thanks to atheik for the analysis and the fix. (BUG_CSUBLNCONT)

2022-05-20:

- Fixed an ancient bug that caused a spurious syntax error when using double
  quotes within a `backtick` command substitution within double quotes.
  Thanks to atheik for the analysis and the fix. (BUG_CSUBBTQUOT)

2022-03-10:

- Fixed another corner case bug in the 'test'/'[' command.

- A memory leak was fixed in the --man self-documentation options
  of built-in commands.

2022-03-05:

- The 'enum' command can now create more than one type per invocation.

- The POSIX compatibility mode has been amended to disable the special handling
  of a repeated $IFS whitespace character as non-whitespace.
