@@ -3,6 +3,11 @@ For full details, see the git log at: https://github.com/ksh93/ksh/tree/1.0
 
 Any uppercase BUG_* names are modernish shell bug IDs.
 
+2022-06-03:
+
+- Fixed a couple of bugs that caused floating point variables imported from
+  a parent ksh through the environment to be corrupted.
+
 2022-06-01:
 
 - New 'typeset' feature inspired by bash (and zsh and mksh): the -g flag
